--- a/homeapp/templates/tells.html
+++ b/homeapp/templates/tells.html
@@ -109,21 +109,23 @@
                            <img src="{{tell.owner.profile.img.url}}" alt="profile-picture" class="img-holder-image">
                         </div>
                         <div class="content-owner">
-                           <a href="{% url 'other-profile' tell.owner.id %}"><h3 class="no-margin">{{tell.owner}}
-                              {% if tell.owner.profile.verified %}
-                              <img src="{% static 'images/icons/verified/verified-blue2.png' %}" class="small-img-feed" alt="verification">
-                              {% endif %}
-                           </h3></a>
+                           <a href="{% url 'other-profile' tell.owner.id %}">
+                              <h3 class="no-margin">{{tell.owner}}
+                                 {% if tell.owner.profile.verified %}
+                                 <img src="{% static 'images/icons/verified/verified-blue2.png' %}" class="small-img-feed" alt="verification">
+                                 {% endif %}
+                              </h3>
+                           </a>
                         </div>
                      </div>
                      {% if request.user not in tell.likers.all %}
-                     <div class="tcon">
+                     <div class="tcon" data-tid="{{tell.id}}">
                         <img src="{% static 'images/icons/heart/heartb-16.png' %}" class="theartb" alt="like">
                         <img src="{% static 'images/icons/heart/heartr-16.png' %}" class="theartr none" alt="dislike">
                         <small><strong class="lcount">{{tell.get_total_likes}}</strong></small>
                      </div>
                      {% else %}
-                     <div class="tcon">
+                     <div class="tcon" data-tid="{{tell.id}}">
                         <img src="{% static 'images/icons/heart/heartb-16.png' %}" class="theartb none" alt="like">
                         <img src="{% static 'images/icons/heart/heartr-16.png' %}" class="theartr" alt="dislike">
                         <small><strong class="lcount text-pink">{{tell.get_total_likes}}</strong></small>
@@ -144,13 +146,13 @@
                   {% endfor %}
                   <div class="content-layer-4-updated flex">
                         {% if tell.commentontell_set.all.count > 1 %}
-                        <p class="grey no-margin"><a href="{% url 'tell-comments-page' tell.id %}?q={{request.path}}">see {{tell.commentontell_set.all.count|add:-1}} other comment{{tell.commentontell_set.all.count|add:-1|pluralize}}</a></p>
+                        <a href="{% url 'tell-comments-page' tell.id %}?q={{request.path}}"><small class="grey no-margin">{{tell.commentontell_set.all.count|add:-1}} other comment{{tell.commentontell_set.all.count|add:-1|pluralize}}</small></a>
                         <small class="grey no-margin">{{tell.created|timesince}}</small>
                         {% elif tell.commentontell_set.all.count > 0 %}
-                        </a><p class="grey no-margin"><a href="{% url 'tell-comments-page' tell.id %}?q={{request.path}}">no other comments</a></p>
+                        <a href="{% url 'tell-comments-page' tell.id %}?q={{request.path}}"><small class="grey no-margin">no other comments</small></a>
                         <small class="grey no-margin">{{tell.created|timesince}}</small>
                         {% else %}
-                        <p class="grey no-margin"><a href="{% url 'tell-comments-page' tell.id %}?q={{request.path}}">no comments</a></p>
+                        <a href="{% url 'tell-comments-page' tell.id %}?q={{request.path}}"><small class="grey no-margin">no comments</small></a>
                         <small class="grey no-margin">{{tell.created|timesince}}</small>
                         {% endif %}
                   </div>
